--- a/README
+++ b/README
@@ -17,3 +17,9 @@ git clone [https://github.com/tc4dy/SentinelProxy.git](https://github.com/tc4dy/
 cd SentinelProxy
 pip install -r requirements.txt
 python sentinel_proxy.py
+
+🥼 Note: Sentinel is engineered specifically for PC 
+to ensure maximum performance in multi-threaded proxy validation and system optimization. 
+Mobile environments like Termux are not recommended due to network socket limitations and process throttling; 
+use the PC version for a 100% stable experience.
+
